samples/_failures_safe/1761126665_fdc13e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_723c5684.c: In function ‘tokenize’:
./samples/SAFE/__tmp_723c5684.c:162:5: error: expected expression at end of input
  162 |     while (lexer->input[lexer->position] !=
      |     ^~~~~
./samples/SAFE/__tmp_723c5684.c:162:5: error: expected declaration or statement at end of input
